# goit-pythonweb-hw-01

./: .gitignore  README.md  logger.py  pyproject.toml  task1.py  task2.py
